# arxiv-to-prompt

./: .gitignore  README.md  main.py  pyproject.toml
arxiv_to_prompt/: __init__.py  cli.py  main.py
tests/: test_arxiv_to_prompt.py
